App crashes when navigating between UV Editor and Viewport and selecting via A or Alt-A or clicking. #64464

Closed
opened 2019-05-11 06:48:33 +02:00 by David Snelson Smith · 7 comments

System Information
Operating system: Windows 10 Pro
Graphics card: NVidia GTX 745
RAM: 24Gb

Blender Version
Broken on:
Date: 2019-05-10-22:48
Hash: b1af682001
Branch: blender 2.7

Works on:
Date: 2019-05-07-00:16
Hash: bfef3bce1a
Branch: blender 2.7

Short description of error
Crashes when navigating between UV Editor and Viewport and selecting via A or Alt-A or clicking.

Exact steps for others to reproduce the error

  • Start with default setup (cube, camera, & light)
  • Open the UV editor and Viewport or navigate to the UV Editor tab.
  • Click A or Alt-A within the Viewport. Works without crashing
  • Click anywhere within the UV Editor
  • Click A or Alt-A within the UV Editor. Works without crashing
  • Now, without clicking on the Viewport, mouse over the view port and Click A or Alt-A. The app consistently crashes.

Also, these steps produce the same issue:

  • Start with default setup (cube, camera, & light)
  • Open the UV editor and Viewport or navigate to the UV Editor tab.
  • Click A or Alt-A within the Viewport. Works without crashing
  • Click A or Alt-A within the UV Editor. Works without crashing

Click anywhere in the Viewport. App consistently crashes.

**System Information** Operating system: Windows 10 Pro Graphics card: NVidia GTX 745 RAM: 24Gb **Blender Version** **Broken on:** Date: 2019-05-10-22:48 Hash: b1af68200159 Branch: blender 2.7 **Works on:** Date: 2019-05-07-00:16 Hash: bfef3bce1a93 Branch: blender 2.7 **Short description of error** Crashes when navigating between UV Editor and Viewport and selecting via A or Alt-A or clicking. **Exact steps for others to reproduce the error** - Start with default setup (cube, camera, & light) - Open the UV editor and Viewport or navigate to the UV Editor tab. - Click A or Alt-A within the Viewport. Works without crashing - Click anywhere within the UV Editor - Click A or Alt-A within the UV Editor. Works without crashing - Now, without clicking on the Viewport, mouse over the view port and Click A or Alt-A. The app consistently crashes. Also, these steps produce the same issue: - Start with default setup (cube, camera, & light) - Open the UV editor and Viewport or navigate to the UV Editor tab. - Click A or Alt-A within the Viewport. Works without crashing - Click A or Alt-A within the UV Editor. Works without crashing # Click anywhere in the Viewport. App consistently crashes.

Added subscriber: @DavidSnelsonSmith

Added subscriber: @DavidSnelsonSmith

#64481 was marked as duplicate of this issue

#64481 was marked as duplicate of this issue

#64482 was marked as duplicate of this issue

#64482 was marked as duplicate of this issue

Added subscriber: @aamm

Added subscriber: @aamm

Added subscriber: @Euclid.Skyline

Added subscriber: @Euclid.Skyline
Clément Foucault was assigned by Brecht Van Lommel 2019-05-11 12:49:51 +02:00

This issue was referenced by 3cac530ba6

This issue was referenced by 3cac530ba69636add1a1f9a749821dda16be2055

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64464
No description provided.