Fix T64464 App crashes when navigating between UV Editor and Viewport